--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,10 +35,14 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.mcxiaoke.volley:library:1.0.19'
+    annotationProcessor'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'com.jakewharton:butterknife:10.2.0'
+    annotationProcessor 'com.jakewharton:butterknife:10.2.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.reginald.swiperefresh:library:1.1.1'
+    annotationProcessor'com.reginald.swiperefresh:library:1.1.1'
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
 
